# pvdiv-phenology-gxe

./: .gitignore  D2Fgwas.out  README.Rmd  README.md  h2_table_single_site_and_eight_site_midwest_and_gulf_subpops_FL50.csv  h2_table_single_site_and_subpop_FL50_v2.csv  pyproject.toml
PAG/: Detecting Signatures of Selection using the Switchgrass GWAS Panel and Genomic Data.docx  Juenger_MacQueen.docx  PAG Abstract 2020.docx  Plots_PAG_2020.Rmd
R/: 1_VCF_file_filtering_by_common_garden_site.Rmd  3_subset_SNP_files.Rmd  Allele_frequencies_and_positions.Rmd  Analyse_univarate_gwas.Rmd  Analysis_manuscript_mash_GxE.Rmd  Analysis_v0.5_Gulf_and_Midwest_mash_FL50_weather_Uhyp.R  Analysis_v0.5_Gulf_mash_FL50_weather_Uhyp.R  Analysis_v0.5_Midwest_mash_FL50_weather_Uhyp.R  Analysis_v0.5_genetic_covariances.Rmd  Analysis_v0.5_mash_GxE.Rmd  Analysis_v0.5_snp_allele_frequencies_and_other_info.Rmd  Analysis_v0.5_weather_covariance_Uhyp_flowering.Rmd  Analysis_v0.6_QTL_GxE_and_mash_comparison.Rmd  Analysis_v0.6_QTL_interval_plotting.Rmd  Analysis_v0.6_mash_Midwest_greenup_ weather_covariance_Uhyp.R  Analysis_v0.6_weather_covariance_Uhyp_greenup.Rmd  Analysis_v0.7_QTL_interval_lod_plot.Rmd  Analysis_v0.9_mash_pw_all_SNPs.Rmd  Analysis_v1.1_covariance_comparisons.Rmd  Analysis_v1.1_weather_2020.RMd  Analysis_v1.1_weather_2020.Rmd  Analysis_v1.2_mash_using_greedy_covar.Rmd  Analysis_v1.2_mash_using_greedy_covar.html  Analysis_v1.2_mash_using_greedy_covar.qmd  Analysis_v1.2_mash_using_greedy_covar.rmarkdown  D2F_annotations.Rmd  D2F_breakdown_by_site.Rmd  DEAD_tensite_twoyear_linear.R  (+39 more)
(+43163 files in other folders)
